--- a/DoctorsOffice/Views/Doctors/Index.cshtml
+++ b/DoctorsOffice/Views/Doctors/Index.cshtml
@@ -17,4 +17,4 @@
   <li>@Html.ActionLink($"{doctor.Name}", "Details", new { id = doctor.DoctorId }) | @doctor.JoinEntities2.Count Patient(s)</li>
 }
 
-<p>@Html.ActionLink("Add new Doctor", "Create")</p>
+<p>@Html.ActionLink("Add new Doctor", "Create",null, null, new { @class = "btn btn-primary btn-primary:hover"})</p>
