--- a/DoctorsOffice/Views/Specialties/Index.cshtml
+++ b/DoctorsOffice/Views/Specialties/Index.cshtml
@@ -18,5 +18,4 @@
   }
 </ul>
 
-<p>@Html.ActionLink("Add new Specialty", "Create")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<p>@Html.ActionLink("Add new Specialty", "Create",null, null, new { @class = "btn btn-primary btn-primary:hover"})</p>
