--- a/DoctorsOffice/Views/Specialties/Create.cshtml
+++ b/DoctorsOffice/Views/Specialties/Create.cshtml
@@ -7,8 +7,9 @@
 <h4>Add a new specialty</h4>
 @using (Html.BeginForm())
 {
-  @Html.LabelFor(model => model.Description)
+  @Html.LabelFor(model => model.Description, "Description:")
   @Html.TextBoxFor(model => model.Description)
-  <input type="submit" value="Add new Specialty" />
+  <br>
+  <input type="submit" value="Add new Specialty" class = "btn btn-primary btn-primary:hover"/>
 }
-<p>@Html.ActionLink("Show all Specialties", "Index")</p>
+<p>@Html.ActionLink("Show all Specialties", "Index",null, null, new { @class = "btn btn-primary btn-primary:hover"})</p>
