--- a/DoctorsOffice/Views/Home/Index.cshtml
+++ b/DoctorsOffice/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
-@{
-  Layout = "_Layout";
-}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Doctors Office</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/doctorstyles.css">
+  </head>
+  <body>
+    <div class="container">
+      <a href="@Url.Action("Home", "Home", null)"><img class = "splash" src="img/doctor.jpg" style="width:80%;"></a>
+      <p>
+        @Html.ActionLink("See all Specialties", "Index", "Specialties", null, new { @class = "btn btn-primary btn-primary:hover"})
+        @Html.ActionLink("See all Doctors", "Index", "Doctors", null, new { @class = "btn btn-primary btn-primary:hover"})
+        @Html.ActionLink("See all Patients", "Index", "Patients", null, new { @class = "btn btn-primary btn-primary:hover"})
+      </p>
+    </div>
+  </body>
+</html>
 
-<h1>Welcome to the Doctors Office!</h1>
-<p>@Html.ActionLink("See all Specialties", "Index", "Specialties")</p> 
-<p>@Html.ActionLink("See all Doctors", "Index", "Doctors")</p>
-<p>@Html.ActionLink("See all Patients", "Index", "Patients")</p>
